@@ -1,4 +1,8 @@
-﻿drkns 02.04.2015 23:15:07 +0200 - build 4331
+﻿zg 03.04.2015 02:57:53 +0200 - build 4332
+
+1. 0002979: Редактирование любых файлов без потерь в режиме UTF-8.
+
+drkns 02.04.2015 23:15:07 +0200 - build 4331
 
 1. Рефакторинг.
 
